src/index.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

:root {
  --green: #62a14f;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Plus Jakarta Sans', sans-serif;
}

/* .button {
  border: 0;
  padding: 0.5rem;
  border-radius: 0.7rem;
  background-color: var(--green);
  color: white;
}

.btn-search {
  margin-left: 0.7rem;
  padding-left: 1rem;
  padding-right: 1rem;
  font-weight: bold;
} */

.search-bar {
  border: none;
  padding: 0.5rem 0.6rem;
  border-radius: 0.7rem;
  background-color: #eeee;
}
.recipe-list-item {
  transition: all 0.3s;
}

.recipe-list-item:hover {
  background-color: #eeee;
  cursor: pointer;
}

.recipe-img {
  width: 200px;
  height: 200px;
  object-fit: cover;
}

.recipe-details-img {
  width: 50%;
  object-fit: cover;
}

@media (max-width: 576px) {
  .recipe-img,
  .recipe-details-img {
    width: 100%;
    object-fit: cover;
  }
}

.loading-wheel {
  width: 48px;
  height: 48px;
  border: 5px solid #888;
  border-bottom-color: transparent;
  border-radius: 50%;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

